--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,17 +1,17 @@
-.backdrop {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.4);
-}
+    .modalWindow {
+        position: absolute;
+            inset: 40px;
+            border: 1px solid rgb(204, 204, 204);
+            background: rgb(255, 255, 255);
+            overflow: auto;
+            border-radius: 4px;
+            outline: none;
+            padding: 20px;
+        }
 
-.modalWindow {
-    border-radius: 20px;
-    background-color: #000000;
+.image {
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
 
 }
